Make community modules compile